# schizoskript_xXx

./: .gitignore  README.md  docker-compose.yml
presentation/: pp.md
rustyscript/: Dockerfile  main.py  pyproject.toml
rustyscript/rsinterpreter/: game.py  interpreter.py
server/: Dockerfile  main.py  pyproject.toml  ssh_host_key
server/shizoserver/: __init__.py  levels.py  texts.py  utils.py
server/shizoserver/menu/: login.py
