[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
prompt_toolkit = "^3.0.2"
asyncssh = "^2.1.0"
pygments = "^2.5.2"
aio_pika = "^6.4.1"
environs = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
